--- a/app/styles/components/c-control_panel.scss
+++ b/app/styles/components/c-control_panel.scss
@@ -1,21 +1,23 @@
 @import '../settings';
 
 .controlpanel {
+  background: rgba($color-1, .95);
   box-shadow: 29px 0 4px 0 rgba($color-12, .5);
   height: $accordion-mobile-height;
   left: 0;
   max-height: calc(100vh - #{$timebar-height + $duration-picker-height + $map-footer-height + $offset-panel-control});
-  overflow-y: auto;
-  padding: 0 0 0 30px;
   position: absolute;
-  top: $header-height;
+  top: $header-height-mobile;
   width: 100%;
   z-index: 102;
 
   @media #{$mq-tablet} {
+    background: transparent;
     height: auto;
     left: auto;
     max-width: 350px;
+    overflow-y: auto;
+    padding: 0 0 0 30px;
     right: 0;
     top: 0;
   }
@@ -23,6 +25,7 @@
   > .bg-wrapper {
     background: rgba($color-1, .95);
     box-shadow: 0 0 4px 0 rgba($color-12, .5);
+    height: 100%;
   }
 
   .resume-display {
@@ -64,21 +67,22 @@
   }
 
   .map-options {
+    border-bottom: 1px solid $color-13;
     display: flex;
     height: 100%;
     justify-content: space-between;
-    padding: 0 30px;
+    padding: 0 15px;
 
     @media #{$mq-tablet} {
+      border-bottom: 0;
       flex-wrap: wrap;
       padding: 0;
     }
 
     > .accordion-item {
       align-items: center;
-
+      color: $color-5;
       display: inline-flex;
-      padding: 10px 0;
 
       &:last-child {
         border-bottom: 0;
@@ -99,6 +103,20 @@
         justify-content: space-between;
         padding: 10px 15px;
 
+        &.-search {
+          flex-direction: column;
+
+          .header-search-info {
+            align-items: flex-end;
+            display: flex;
+            justify-content: space-between;
+          }
+
+          .header-search-info > .pinned-item-count {
+            margin: 0 0 0 3px;
+          }
+        }
+
         @media #{$mq-tablet} {
           flex-direction: row;
 
@@ -108,7 +126,7 @@
           }
         }
 
-        > .accordion-title {
+        .accordion-title {
           color: $color-4;
           font-family: $font-family-1;
           font-size: $font-size-xxs-small;
@@ -137,12 +155,22 @@
         }
       }
 
+
       .content-accordion {
         padding: 15px 20px;
 
         @media #{$mq-tablet} {
           margin: 10px 0 0;
           padding: 0 15px;
+        }
+
+        > .wrapper {
+          max-height: calc(100vh - #{$timebar-height + $duration-picker-height + $map-footer-height + $offset-panel-control-mobile});
+          overflow-y: auto;
+
+          @media #{$mq-tablet} {
+            overflow-y: visible;
+          }
         }
       }
     }
@@ -166,7 +194,7 @@
     }
 
     :global .react-sanfona-item-body {
-      background: rgba($color-1, .8);
+      background: rgba($color-1, .95);
       left: 0;;
       max-width: 0;
       position: absolute;
