--- a/app/styles/components/c-map.scss
+++ b/app/styles/components/c-map.scss
@@ -17,7 +17,7 @@
   left: 50%;
   position: absolute;
   text-align: center;
-  top: calc(#{$header-height} + #{$accordion-mobile-height});
+  top: calc(#{$header-height-mobile} + #{$accordion-mobile-height});
   transform: translate(-50%, 0);
   width: 100%;
   z-index: 101;
