--- a/app/styles/components/map/c-flag-filters.scss
+++ b/app/styles/components/map/c-flag-filters.scss
@@ -1,6 +1,13 @@
 @import '../../settings';
 
 .c-flag-filters {
+  max-height: calc(100vh - #{$timebar-height + $duration-picker-height + $map-footer-height + $offset-panel-control-mobile});
+  overflow-y: auto;
+
+  @media #{$mq-tablet} {
+    max-height: none;
+    overflow-y: visible;
+  }
 
   > .filter-list > .filter-item {
     align-items: center;
@@ -12,23 +19,40 @@
     }
 
     .filter-option {
-      padding: 0 0 0 10px;
-      width: 20%;
+      flex: 1;
+
+      @media #{mq-tablet} {
+        width: 20%;
+      }
     }
 
     .filter-option-list {
       align-items: center;
       display: flex;
-      justify-content: space-between;
+      justify-content: center;
+      margin: 0 0 0 10px;
     }
 
     .filter-option-list > .filter-option-item {
-      display: flex;
+      display: inline-flex;
+      position: relative;
+
+      &:not(:first-child) {
+        margin: 0 0 0 15px;
+      }
     }
   }
 
   > .filter-button {
+    height: 40px;
     margin: 10px 0 0;
-    width: 215px;;
+    max-width: 80%;
+    width: 100%;
+
+    @media #{$mq-tablet} {
+      height: 30px;
+      max-width: none;
+      width: 215px;
+    }
   }
 }
