--- a/app/styles/components/map/c-layer-list.scss
+++ b/app/styles/components/map/c-layer-list.scss
@@ -5,6 +5,10 @@
   display: flex;
   flex-wrap: wrap;
 
+  @media #{mq-tablet} {
+    max-height: 0;
+  }
+
   > .layer-item {
     align-items: center;
     display: flex;
@@ -35,6 +39,11 @@
       align-items: center;
       cursor: pointer;
       display: inline-flex;
+      max-width: 90%;
+
+      @media #{$mq-tablet} {
+        max-width: 195px;
+      }
 
       > .layer-thumbnail {
         border: 1px solid $color-19;
@@ -45,11 +54,17 @@
 
       > .layer-title {
         color: $color-4;
+        flex-grow: 2;
         font-family: $font-family-1;
-        font-size: $font-size-xxs-small;
         font-weight: $font-weight-normal;
         line-height: 2;
-        text-transform: uppercase;
+        overflow-y: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+
+        @media #{$mq-tablet} {
+          font-size: $font-size-xxs-small;
+        }
       }
     }
 
@@ -57,12 +72,19 @@
       background-color: transparent;
       border: 0;
       color: $color-4;
-      flex: 1;
+      flex-grow: 2;
       font-family: $font-family-1;
-      font-size: $font-size-xxs-small;
+      font-size: $font-size-normal;
       height: 24px;
       margin: 0 15px 0 0;
+      max-width: 155;
       outline: none;
+      text-overflow: ellipsis;
+
+      @media #{$mq-tablet} {
+        font-size: $font-size-xxs-small;
+        max-width: 145px;
+      }
     }
 
     > .item-rename {
@@ -87,15 +109,19 @@
       }
     }
 
-
     > .layer-option-list {
+      align-items: center;
       display: flex;
+      flex: 1;
+      justify-content: flex-end;
 
       > .layer-option-item {
         cursor: pointer;
+        display: inline-flex;
+        position: relative;
 
         &:not(:first-child) {
-          margin: 0 0 0 10px;
+          margin: 0 0 0 15px;
         }
       }
 
