--- a/app/styles/components/c-control_panel.scss
+++ b/app/styles/components/c-control_panel.scss
@@ -5,7 +5,6 @@
   box-shadow: 29px 0 4px 0 rgba($color-12, .5);
   height: $accordion-mobile-height;
   left: 0;
-  max-height: calc(100vh - #{$timebar-height + $duration-picker-height + $map-footer-height + $offset-panel-control});
   position: absolute;
   top: $header-height-mobile;
   width: 100%;
@@ -15,6 +14,7 @@
     background: transparent;
     height: auto;
     left: auto;
+    max-height: calc(100vh - #{$timebar-height + $duration-picker-height + $map-footer-height + $offset-panel-control});
     max-width: 350px;
     overflow-y: auto;
     padding: 0 0 0 30px;
@@ -157,20 +157,15 @@
 
 
       .content-accordion {
+        max-height: calc(100vh - #{$timebar-height + $duration-picker-height + $map-footer-height + $offset-panel-control-mobile});
+        overflow-y: auto;
         padding: 15px 20px;
 
         @media #{$mq-tablet} {
           margin: 10px 0 0;
+          max-height: none;
+          overflow-y: visible;
           padding: 0 15px;
-        }
-
-        > .wrapper {
-          max-height: calc(100vh - #{$timebar-height + $duration-picker-height + $map-footer-height + $offset-panel-control-mobile});
-          overflow-y: auto;
-
-          @media #{$mq-tablet} {
-            overflow-y: visible;
-          }
         }
       }
     }
