Adjust accordion wrapper to overflow properly

--- a/app/styles/components/c-control_panel.scss
+++ b/app/styles/components/c-control_panel.scss
@@ -29,7 +29,7 @@
   }
 
   .resume-display {
-    border-bottom: 1px solid $color-7;
+    border-bottom: 1px solid rgba($color-7, .4);
     display: none;
     flex-direction: column;
     padding: 30px 56px 25px 25px;
@@ -155,13 +155,13 @@
         }
       }
 
-
       .content-accordion {
-        max-height: calc(100vh - #{$timebar-height + $duration-picker-height + $map-footer-height + $offset-panel-control-mobile});
+        max-height: 100%;
         overflow-y: auto;
         padding: 15px 20px;
 
         @media #{$mq-tablet} {
+          height: auto;
           margin: 10px 0 0;
           max-height: none;
           overflow-y: visible;
@@ -190,11 +190,15 @@
 
     :global .react-sanfona-item-body {
       background: rgba($color-1, .95);
-      left: 0;;
+      left: 0;
       max-width: 0;
       position: absolute;
       top: $accordion-mobile-height;
       width: 100%;
+
+      > .react-sanfona-item-body-wrapper {
+        height: calc(100vh - #{$header-height-mobile + $accordion-mobile-height + $map-footer-height});
+      }
 
       @media #{$mq-tablet} {
         background: transparent;
