--- a/app/styles/components/c-control_panel.scss
+++ b/app/styles/components/c-control_panel.scss
@@ -198,6 +198,10 @@
 
       > .react-sanfona-item-body-wrapper {
         height: calc(100vh - #{$header-height-mobile + $accordion-mobile-height + $map-footer-height});
+
+        @media #{$mq-tablet} {
+          height: auto;
+        }
       }
 
       @media #{$mq-tablet} {
