Added expand option to vesselInfo

--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -15,6 +15,7 @@ $offset-panel-control: 20px;
 $header-height-mobile: 60px;
 $header-height: 95px;
 $accordion-mobile-height: 60px;
+$vessel-info-height: 70px;
 
 
 // Map
