--- a/app/styles/components/map/c-recent-vessels.scss
+++ b/app/styles/components/map/c-recent-vessels.scss
@@ -34,15 +34,32 @@
   .history-list > .history-item {
     align-items: center;
     display: flex;
-    flex: 0 0 33.333%;
+    flex: 1;
+    flex-basis: 100%;
     margin: 0 0 15px;
-    max-width: 33.333%;
-    padding: 0 10px 0 0;
+    max-width: 100%;
+    padding: 0 0 0 20px;
+    position: relative;
 
+    @media screen and (min-width: 650px) {
+      flex: 0 0 50%;
+      max-width: 50%;
+      padding: 0 10px 0 20px;
+    }
+
+
+    @media #{$mq-tablet} {
+      flex: 0 0 33.333%;
+      max-width: 33.333%;
+    }
 
     > .pinned {
       fill: rgba($color-3, .5);
+      left: 0;
       margin: 0 8px 0 0;
+      position: absolute;
+      top: 50%;
+      transform: translate(0, -50%);
     }
 
     > .history-item-name {
