--- a/app/styles/components/map/c-prompt-layer.scss
+++ b/app/styles/components/map/c-prompt-layer.scss
@@ -1,21 +1,37 @@
 @import '../../settings';
 
 .c-prompt-layer {
-  margin: 20px 0 0 0;
+  margin: 20px 0 0;
 
   > .layer-description {
     font-family: $font-family-1;
+    text-align: center;
   }
 
   .footer {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     margin: 20px 0 0;
+
+    @media #{$mq-mobile-large} {
+      flex-direction: row;
+      margin: 40px 0 0;
+    }
 
     > .modal-btn {
       height: 42px;
       width: 150px;
 
       &:not(:first-child) {
-        margin: 0 0 0 20px;
+        margin: 8px 0 0;
+      }
+
+      @media #{$mq-mobile-large} {
+        &:not(:first-child) {
+          margin: 0 0 0 8px;
+        }
       }
     }
   }
