Fixed border-radius on iPad

--- a/app/styles/components/map/c-layer-list.scss
+++ b/app/styles/components/map/c-layer-list.scss
@@ -71,6 +71,7 @@
       background-color: transparent;
       border: 0;
       border-bottom: 1px solid transparent;
+      border-radius: 0;
       color: $color-4;
       flex-grow: 2;
       font-family: $font-family-1;
