--- a/app/styles/components/map/c-pinned-tracks.scss
+++ b/app/styles/components/map/c-pinned-tracks.scss
@@ -29,6 +29,7 @@
       background-color: transparent;
       border: 0;
       border-bottom: 1px solid transparent;
+      border-radius: 0;
       color: $color-4;
       cursor: pointer;
       flex: 1;
