--- a/app/styles/components/map/c-form.scss
+++ b/app/styles/components/map/c-form.scss
@@ -5,6 +5,7 @@
   .field-name {
     color: $color-4;
     font-size: $font-size-small;
+    font-weight: $font-weight-bold;
     text-transform: uppercase;
 
     & + * {
@@ -22,15 +23,15 @@
     font-size: $font-size-small;
 
     ::-webkit-input-placeholder {
-      color: $color-14;
+      color: rgba($color-14, .3);
     }
 
     ::-moz-placeholder {
-      color: $color-14;
+      color: rgba($color-14, .3);
     }
 
     :-ms-input-placeholder {
-      color: $color-14;
+      color: rgba($color-14, .3);
     }
   }
 
@@ -62,7 +63,7 @@
       z-index: 1;
 
       > .fake-file-input-placeholder {
-        color: $color-14;
+        color: rgba($color-14, .3);
         font-size: $font-size-small;
         overflow-x: auto;
         text-overflow: ellipsis;
@@ -72,8 +73,11 @@
     }
 
     > .fake-file-container > .fake-file-button {
+      align-items: center;
+      display: inline-flex;
       float: right;
       height: 100%;
+      justify-content: center;
       padding: 10px 0;
       position: relative;
       width: calc(100% / 3);
@@ -92,7 +96,12 @@
 
   .textarea {
     height: 100%;
+    min-height: 124px;
     resize: none;
+
+    @media #{$mq-tablet} {
+      min-height: none;
+    }
   }
 
   .file-input {
