--- a/app/styles/components/map/c-upload-layer.scss
+++ b/app/styles/components/map/c-upload-layer.scss
@@ -10,6 +10,11 @@
     .submit-container {
       display: flex;
       justify-content: center;
+      margin: 55px 0 0;
+
+      @media #{$mq-tablet} {
+        margin: 45px 0 0;
+      }
     }
 
     .submit-container > .submit-button {
@@ -19,8 +24,20 @@
 
   .column {
     display: flex;
-    flex-basis: calc(50% - 13px);
+    flex-basis: 100%;
     flex-direction: column;
+
+    &:not(:first-child) {
+      margin: 15px 0 0;
+    }
+
+    @media #{$mq-tablet} {
+      flex-basis: calc(50% - 13px);
+
+      &:not(:first-child) {
+        margin: 0;
+      }
+    }
   }
 
   .row {
