--- a/app/styles/components/map/c-layer-library.scss
+++ b/app/styles/components/map/c-layer-library.scss
@@ -37,20 +37,69 @@
     }
   }
 
-  > .layer-list {
-    background-image: linear-gradient(to bottom, $color-24, $color-2);
-    column-count: 2;
-    column-gap: 225px;
-    margin: 10px 0 0;
+  .wrapper {
+    overflow: auto;
+    padding: 0 0 5px;
+    position: relative;
+
+    &::after {
+      background-image: linear-gradient(to bottom, rgba(4, 20, 56, 0), $color-2);
+      bottom: 25px;
+      content: '';
+      display: inline-block;
+      height: 25px;
+      left: 0;
+      position: relative;
+      width: 100%;
+    }
   }
 
-  > .layer-list > .layer-item {
+  .layer-list {
+    background-image: linear-gradient(to bottom, $color-24, $color-2);
     display: flex;
+    flex-wrap: wrap;
+    margin: 10px 0 0;
+    max-height: 225px;
+    overflow-y: auto;
+    padding: 0 0 12px;
+
+    @media #{$mq-tablet} {
+      justify-content: space-between;
+    }
+  }
+
+  .layer-list > .layer-item {
+    align-items: center;
+    display: flex;
+    flex-basis: 100%;
     justify-content: space-between;
-    max-width: 275px;
+    max-width: 100%;
 
     &:not(:first-child) {
       margin: 10px 0 0;
+    }
+
+    @media #{$mq-tablet} {
+      flex-basis: 40%;
+      max-width: 40%;
+
+      &:first-child,
+      &:nth-child(2) {
+        margin: 0;
+      }
+    }
+
+    label {
+      align-items: center;
+      display: flex;
+      flex-wrap: nowrap;
+      max-width: 90%;
+
+      > span {
+        overflow-y: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+      }
     }
   }
 
