Fix height form fields in Safari

--- a/app/styles/components/map/c-form.scss
+++ b/app/styles/components/map/c-form.scss
@@ -18,6 +18,7 @@
   .textarea {
     background: transparent;
     border: 1px solid $color-14;
+    border-radius: 0;
     color: $color-4;
     font-family: $font-family-1;
     font-size: $font-size-small;
