--- a/app/styles/components/c-map.scss
+++ b/app/styles/components/c-map.scss
@@ -11,6 +11,19 @@
   z-index: 5;
 }
 
+.latlon {
+  display: none;
+  @media #{$mq-tablet} {
+    bottom: 45px;
+    color: rgba($color-4, .6);
+    display: block;
+    font-size: $font-size-xxs-small;
+    left: 45px;
+    position: absolute;
+    z-index: 99;
+  }
+}
+
 .attributions-container {
   background-image: linear-gradient(to bottom, rgba(0, 17, 55, .9), rgba(8, 23, 54, 0));
   height: 40px;
