--- a/app/styles/components/shared/c-switcher.scss
+++ b/app/styles/components/shared/c-switcher.scss
@@ -1,35 +1,45 @@
 @import '../../settings';
 
 // this component needs crossbrowsing
+
 .c-switcher {
   appearance: none;
+  position: relative;
+  display: flex;
   background: linear-gradient(to bottom, $hsla-begin, $hsla-end), linear-gradient(to right, $color-27 50%, currentColor 50%) 0 0, 5px 0;
-  background-size: 100% 100%, 200% 100%;
   border-radius: 25px;
-  color: $color-19;
   cursor: pointer;
+  width: 20px;
   height: 10px;
   margin: 0 15px 0 0;
   outline: 0;
   padding: 0 10px 0 0;
-  position: relative;
-  transition: .15s;
-  width: 20px;
 
-  &::after {
-    background: $color-26 linear-gradient($hsla-end, $hsla-begin);
-    border-radius: 25px;
-    content: '';
-    display: block;
-    height: 10px;
-    left: 0;
-    position: relative;
-    top: 0;
-    width: 10px;
+  &.-active {
+    .toggle {
+      left: 10px;
+    }
   }
 
-  &:checked {
-    background-position: 0 0, 15px 0;
-    padding: 0 0 0 10px;
+  input {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    cursor: pointer;
+  }
+
+  .toggle {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    background: $color-26 linear-gradient($hsla-end, $hsla-begin);
+    border-radius: 50%;
+    transition: .15s ease-in;
   }
 }
