country list fixes

--- a/app/styles/components/shared/c-selector.scss
+++ b/app/styles/components/shared/c-selector.scss
@@ -24,6 +24,11 @@
     font-weight: $font-weight-normal;
     outline: none;
     width: 100%;
+
+    > option {
+      background: $color-4;
+      color: $color-12;
+    }
   }
 
   &::after {
