removes overflow overlay

--- a/app/styles/components/map/c-welcome-modal.scss
+++ b/app/styles/components/map/c-welcome-modal.scss
@@ -10,7 +10,7 @@
   max-height: 50vh;
 
   > .content {
-    overflow: overlay;
+    overflow: auto;
     max-height: 40vh;
     text-align: center;
     padding: 45px 0;
