--- a/app/styles/components/map/c-pinned-tracks.scss
+++ b/app/styles/components/map/c-pinned-tracks.scss
@@ -4,18 +4,18 @@
   margin: 10px 0 0;
 
   > .pinned-tracks-heading {
-      display: flex;
-      justify-content: flex-end;
-      color: $color-4;
-      font-family: $font-family-1;
-      font-size: $font-size-xxs-small;
-      font-weight: $font-weight-bold;
-      text-transform: uppercase;
-      margin-bottom: 10px 0;
+    color: $color-4;
+    display: flex;
+    font-family: $font-family-1;
+    font-size: $font-size-xxs-small;
+    font-weight: $font-weight-bold;
+    justify-content: flex-end;
+    margin-bottom: 10px;
+    text-transform: uppercase;
 
-      @media #{$mq-tablet} {
-        font-size: $font-size-x-small;
-      }
+    @media #{$mq-tablet} {
+      font-size: $font-size-xs-small;
+    }
   }
 
   > .no-pinned-items {
