adds mobile scroll + fixes modal mobile style

--- a/app/styles/components/shared/c-modal.scss
+++ b/app/styles/components/shared/c-modal.scss
@@ -17,7 +17,7 @@
     display: flex;
     height: calc(100% - 45px);
     min-width: 320px;
-    position: absolute;
+    position: relative;
     width: calc(100% - 45px);
 
 
