--- a/app/styles/components/c-control_panel.scss
+++ b/app/styles/components/c-control_panel.scss
@@ -158,6 +158,7 @@
       .content-accordion {
         max-height: calc(100% - 108px);
         overflow-y: auto;
+        -webkit-overflow-scrolling: touch;
         padding: 15px 20px;
 
         @media #{$mq-tablet} {
