sets and removes events on visibility toggle

--- a/app/styles/components/c-control_panel.scss
+++ b/app/styles/components/c-control_panel.scss
@@ -156,7 +156,7 @@
       }
 
       .content-accordion {
-        max-height: calc(100% - 108px);
+        height: calc(100% - 108px);
         overflow-y: auto;
         -webkit-overflow-scrolling: touch;
         padding: 15px 20px;
