add ACL to allow/prevent upload of custom layers

--- a/app/styles/components/map/c-custom-layer.scss
+++ b/app/styles/components/map/c-custom-layer.scss
@@ -2,6 +2,11 @@
 
 .c-custom-layer {
 
+  .no-access {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+  }
   > .upload-form {
     display: flex;
     flex-wrap: wrap;
