--- a/app/styles/components/map/c-custom-layer.scss
+++ b/app/styles/components/map/c-custom-layer.scss
@@ -7,6 +7,7 @@
     justify-content: center;
     width: 100%;
   }
+
   > .upload-form {
     display: flex;
     flex-wrap: wrap;
@@ -69,5 +70,14 @@
     &:not(:first-child) {
       margin: 15px 0 0;
     }
+  }
+
+  .custom-layer-caption {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: $font-size-normal;
+    font-family: $font-family-1;
+    margin-bottom: 15px;
   }
 }
