--- a/app/styles/components/c-map.scss
+++ b/app/styles/components/c-map.scss
@@ -106,7 +106,7 @@
 }
 
 .map-container {
-  height: calc(100vh - #{$map-footer-height + $timebar-height});
+  height: calc(100% - #{$map-footer-height + $timebar-height});
   position: relative;
   z-index: 4;
 
