conditional render of the map`s sidebar

--- a/app/styles/components/c-map.scss
+++ b/app/styles/components/c-map.scss
@@ -42,6 +42,10 @@
   @media #{$mq-tablet} {
     display: none;
   }
+
+  &.-embed {
+    top: $header-height-mobile;
+  }
 }
 
 .attributions-container > .mobile-map-attributions {
