--- a/app/styles/components/c-map.scss
+++ b/app/styles/components/c-map.scss
@@ -125,6 +125,10 @@
   :global .gm-style a {
     display: none !important; // sass-lint:disable-line no-important
   }
+
+  &.-no-footer{
+    height: calc(100% - #{$timebar-height});
+  }
 }
 
 .map-iframe-container {
